# checkngn

./: .gitignore  INTERNALS.md  README.md  pyproject.toml  test_normalize.py
.github/workflows/: automatic-test.yml  release.yml
checkngn/: __init__.py  actions.py  engine.py  exceptions.py  operators.py  utils.py  variables.py
tests/: test_actions_class.py  test_engine.py  test_operators_class.py
